--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI Pipeline
+name: Run Tests
 
 on:
   push:
@@ -9,35 +9,45 @@ on:
       - main
 
 jobs:
-  build-and-test:
+  test:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up JDK 21
+      - name: Setup JDK 21
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '21'
-          cache: 'maven'
+          cache: 'maven'  # Using built-in caching for Maven
+
+      - name: Cache Maven dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-maven-
 
       - name: Build with Maven
         run: mvn clean install
         working-directory: BlockDAG-Automation
 
-      - name: Start Application
-        run: mvn exec:java -Dexec.mainClass="com.example.Main"
-        working-directory: BlockDAG-Automation
-        # Replace "com.example.Main" with your actual main class
-
       - name: Run Tests
         run: mvn test -DsuiteXmlFile=src/test/resources/testng.xml
         working-directory: BlockDAG-Automation
 
-      - name: Upload Test Reports
-        uses: actions/upload-artifact@v4
+      - name: Upload Surefire Reports
+        if: always()
+        uses: actions/upload-artifact@v3
         with:
-          name: test-results
+          name: surefire-reports
+          path: BlockDAG-Automation/target/surefire-reports
+
+      - name: Upload Emailable Report
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: emailable-report
           path: BlockDAG-Automation/test-output/emailable-report.html
