--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,9 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write  # Required for OIDC authentication
+      contents: read
 
     steps:
       - name: Checkout code
@@ -21,7 +24,7 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '21'
-          cache: 'maven'  # Using built-in caching for Maven
+          cache: 'maven'
 
       - name: Cache Maven dependencies
         uses: actions/cache@v3
@@ -29,10 +32,6 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-maven-
-
-      - name: Build with Maven
-        run: mvn clean install
-        working-directory: BlockDAG-Automation
 
       - name: Run Tests
         run: mvn test -DsuiteXmlFile=src/test/resources/testng.xml
@@ -51,3 +50,16 @@ jobs:
         with:
           name: emailable-report
           path: BlockDAG-Automation/test-output/emailable-report.html
+
+      # ✅ Configure AWS CLI with OIDC
+      - name: Configure AWS CLI with OIDC
+        run: |
+          aws sts get-caller-identity
+        env:
+          AWS_REGION: us-east-1  # Update this with your region
+
+      # ✅ Upload reports to S3
+      - name: Upload Test Reports to S3
+        run: |
+          aws s3 cp BlockDAG-Automation/target/surefire-reports s3://stage-test-report-blockdag/surefire-reports/ --recursive
+          aws s3 cp BlockDAG-Automation/test-output/emailable-report.html s3://stage-test-report-blockdag/emailable-report.html
