--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,10 +42,6 @@ jobs:
       - name: Verify AWS Identity
         run: aws sts get-caller-identity
 
-      - name: Set Global Timestamp
-        id: set_timestamp
-        run: echo "GLOBAL_TIMESTAMP=$(date +"%Y-%m-%d %H-%M-%S")" >> $GITHUB_ENV
-
       - name: Run Tests
         id: run_tests
         run: mvn test -DsuiteXmlFile=src/test/resources/testng.xml
@@ -69,15 +65,13 @@ jobs:
       - name: Upload Test Reports to S3
         if: always()
         run: |
+          CURRENT_DATE=$(date +"%Y-%m-%d")
           YEAR=$(date +"%Y")
           MONTH=$(date +"%m")
           DAY=$(date +"%d")
-          TIME_FORMAT_FOLDER="${{ env.GLOBAL_TIMESTAMP }}"  # Use the global timestamp
-
-          # Replace colons with hyphens for S3 compatibility
-          SAFE_TIME_FORMAT_FOLDER=$(echo $TIME_FORMAT_FOLDER | tr ':' '-')
+          TIME_FORMAT_FOLDER=$(date +"%H-%M-%S")
           
-          S3_BASE_PATH="stage/${YEAR}/${MONTH}/${DAY}/${SAFE_TIME_FORMAT_FOLDER}/"
+          S3_BASE_PATH="stage/${YEAR}/${MONTH}/${DAY}/${TIME_FORMAT_FOLDER}/"
           
           aws s3 cp BlockDAG-Automation/target/surefire-reports s3://stage-test-report-blockag/${S3_BASE_PATH}surefire-reports/ --recursive
           aws s3 cp BlockDAG-Automation/test-output/ExtentReport.html s3://stage-test-report-blockag/${S3_BASE_PATH}ExtentReport.html
@@ -87,13 +81,14 @@ jobs:
         if: always()
         run: |
           STATUS=${{ job.status }}
-          DATE_TIME="${{ env.GLOBAL_TIMESTAMP }}"
+          DATE_TIME=$(date +"%Y-%m-%d %H:%M:%S")
           YEAR=$(date +"%Y")
           MONTH=$(date +"%m")
           DAY=$(date +"%d")
+          TIME_FORMAT_FOLDER=$(date +"%H-%M-%S")
           
           # Construct the report link using the secret
-          REPORT_LINK="${{ secrets.REPORT_LINK_EMAILABLE }}/stage/${YEAR}/${MONTH}/${DAY}/${DATE_TIME}/ExtentReport.html"
+          REPORT_LINK="${{ secrets.REPORT_LINK_EMAILABLE }}/stage/${YEAR}/${MONTH}/${DAY}/${TIME_FORMAT_FOLDER}/ExtentReport.html"
           
           # Create the message to send to Slack
           MESSAGE="Test case run for stage environment on $DATE_TIME. \n\nReport: $REPORT_LINK"
