--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -42,10 +42,6 @@ jobs:
       - name: Verify AWS Identity
         run: aws sts get-caller-identity
 
-      - name: Set Global Timestamp
-        id: set_timestamp
-        run: echo "GLOBAL_TIMESTAMP=$(date +"%Y-%m-%d %H-%M-%S")" >> $GITHUB_ENV
-
       - name: Run Tests
         id: run_tests
         run: mvn test -DsuiteXmlFile=src/test/resources/testng.xml
@@ -65,38 +61,36 @@ jobs:
           name: emailable-report
           path: BlockDAG-Automation/test-output/ExtentReport.html
 
-      # ✅ Upload reports to S3 with formatted path
+      # ✅ Generate timestamp once and pass as an output variable
+      - name: Generate Timestamp
+        id: generate_timestamp
+        run: |
+          TIMESTAMP=$(date +"%Y-%m-%d %H-%M-%S")
+          YEAR=$(date +"%Y")
+          MONTH=$(date +"%m")
+          DAY=$(date +"%d")
+          TIME_FORMAT_FOLDER=$(date +"%H-%M-%S")
+          
+          S3_PATH="stage/${YEAR}/${MONTH}/${DAY}/${TIME_FORMAT_FOLDER}/"
+          
+          echo "TIMESTAMP=$TIMESTAMP" >> $GITHUB_ENV
+          echo "S3_PATH=$S3_PATH" >> $GITHUB_ENV
+          echo "::set-output name=s3_path::$S3_PATH"
+          echo "::set-output name=timestamp::$TIMESTAMP"
+
+      # ✅ Upload reports to S3 with exact timestamp path
       - name: Upload Test Reports to S3
         if: always()
         run: |
-          YEAR=$(date +"%Y")
-          MONTH=$(date +"%m")
-          DAY=$(date +"%d")
-          TIME_FORMAT_FOLDER="${{ env.GLOBAL_TIMESTAMP }}"  # Use the global timestamp
+          aws s3 cp BlockDAG-Automation/target/surefire-reports s3://stage-test-report-blockag/${{ env.S3_PATH }}surefire-reports/ --recursive
+          aws s3 cp BlockDAG-Automation/test-output/ExtentReport.html s3://stage-test-report-blockag/${{ env.S3_PATH }}ExtentReport.html
 
-          # Replace colons with hyphens for S3 compatibility
-          SAFE_TIME_FORMAT_FOLDER=$(echo $TIME_FORMAT_FOLDER | tr ':' '-')
-          
-          S3_BASE_PATH="stage/${YEAR}/${MONTH}/${DAY}/${SAFE_TIME_FORMAT_FOLDER}/"
-          
-          aws s3 cp BlockDAG-Automation/target/surefire-reports s3://stage-test-report-blockag/${S3_BASE_PATH}surefire-reports/ --recursive
-          aws s3 cp BlockDAG-Automation/test-output/ExtentReport.html s3://stage-test-report-blockag/${S3_BASE_PATH}ExtentReport.html
-
-      # ✅ Send Google Chat Notification
-      - name: Send Google Chat Notification
+      # ✅ Send Slack Notification with the same timestamp-based path
+      - name: Send Slack Notification
         if: always()
         run: |
-          STATUS=${{ job.status }}
-          DATE_TIME="${{ env.GLOBAL_TIMESTAMP }}"
-          YEAR=$(date +"%Y")
-          MONTH=$(date +"%m")
-          DAY=$(date +"%d")
+          REPORT_LINK="${{ secrets.REPORT_LINK_EMAILABLE }}/${{ env.S3_PATH }}ExtentReport.html"
           
-          # Construct the report link using the secret
-          REPORT_LINK="${{ secrets.REPORT_LINK_EMAILABLE }}/stage/${YEAR}/${MONTH}/${DAY}/${DATE_TIME}/ExtentReport.html"
+          MESSAGE="Test case run for stage environment on ${{ env.TIMESTAMP }}. \n\nReport: $REPORT_LINK"
           
-          # Create the message to send to Google Chat
-          MESSAGE="Test case run for stage environment on $DATE_TIME. \n\nReport: $REPORT_LINK"
-          
-          # Send the notification to Google Chat
-          curl -X POST -H 'Content-Type: application/json' --data "{\"text\":\"$MESSAGE\"}" ${{ secrets.GOOGLE_CHAT_WEBHOOK_URL }}
+          curl -X POST -H 'Content-type: application/json' --data "{\"channel\":\"${{ secrets.SLACK_CHANNEL_NAME }}\", \"text\":\"$MESSAGE\"}" ${{ secrets.SLACK_WEBHOOK_URL }}
