--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,37 +61,36 @@ jobs:
           name: emailable-report
           path: BlockDAG-Automation/test-output/ExtentReport.html
 
-      # ✅ Upload reports to S3 with formatted path
+      # ✅ Generate timestamp once and pass as an output variable
+      - name: Generate Timestamp
+        id: generate_timestamp
+        run: |
+          TIMESTAMP=$(date +"%Y-%m-%d %H-%M-%S")
+          YEAR=$(date +"%Y")
+          MONTH=$(date +"%m")
+          DAY=$(date +"%d")
+          TIME_FORMAT_FOLDER=$(date +"%H-%M-%S")
+          
+          S3_PATH="stage/${YEAR}/${MONTH}/${DAY}/${TIME_FORMAT_FOLDER}/"
+          
+          echo "TIMESTAMP=$TIMESTAMP" >> $GITHUB_ENV
+          echo "S3_PATH=$S3_PATH" >> $GITHUB_ENV
+          echo "::set-output name=s3_path::$S3_PATH"
+          echo "::set-output name=timestamp::$TIMESTAMP"
+
+      # ✅ Upload reports to S3 with exact timestamp path
       - name: Upload Test Reports to S3
         if: always()
         run: |
-          CURRENT_DATE=$(date +"%Y-%m-%d")
-          YEAR=$(date +"%Y")
-          MONTH=$(date +"%m")
-          DAY=$(date +"%d")
-          TIME_FORMAT_FOLDER=$(date +"%H-%M-%S")
-          
-          S3_BASE_PATH="stage/${YEAR}/${MONTH}/${DAY}/${TIME_FORMAT_FOLDER}/"
-          
-          aws s3 cp BlockDAG-Automation/target/surefire-reports s3://stage-test-report-blockag/${S3_BASE_PATH}surefire-reports/ --recursive
-          aws s3 cp BlockDAG-Automation/test-output/ExtentReport.html s3://stage-test-report-blockag/${S3_BASE_PATH}ExtentReport.html
+          aws s3 cp BlockDAG-Automation/target/surefire-reports s3://stage-test-report-blockag/${{ env.S3_PATH }}surefire-reports/ --recursive
+          aws s3 cp BlockDAG-Automation/test-output/ExtentReport.html s3://stage-test-report-blockag/${{ env.S3_PATH }}ExtentReport.html
 
-      # ✅ Send Slack Notification
+      # ✅ Send Slack Notification with the same timestamp-based path
       - name: Send Slack Notification
         if: always()
         run: |
-          STATUS=${{ job.status }}
-          DATE_TIME=$(date +"%Y-%m-%d %H:%M:%S")
-          YEAR=$(date +"%Y")
-          MONTH=$(date +"%m")
-          DAY=$(date +"%d")
-          TIME_FORMAT_FOLDER=$(date +"%H-%M-%S")
+          REPORT_LINK="${{ secrets.REPORT_LINK_EMAILABLE }}/${{ env.S3_PATH }}ExtentReport.html"
           
-          # Construct the report link using the secret
-          REPORT_LINK="${{ secrets.REPORT_LINK_EMAILABLE }}/stage/${YEAR}/${MONTH}/${DAY}/${TIME_FORMAT_FOLDER}/ExtentReport.html"
+          MESSAGE="Test case run for stage environment on ${{ env.TIMESTAMP }}. \n\nReport: $REPORT_LINK"
           
-          # Create the message to send to Slack
-          MESSAGE="Test case run for stage environment on $DATE_TIME. \n\nReport: $REPORT_LINK"
-          
-          # Send the notification to Slack
           curl -X POST -H 'Content-type: application/json' --data "{\"channel\":\"${{ secrets.SLACK_CHANNEL_NAME }}\", \"text\":\"$MESSAGE\"}" ${{ secrets.SLACK_WEBHOOK_URL }}
