--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,36 +61,39 @@ jobs:
           name: emailable-report
           path: BlockDAG-Automation/test-output/ExtentReport.html
 
-      # ✅ Generate timestamp once and pass as an output variable
+      # ✅ Generate timestamp and store it in a file
       - name: Generate Timestamp
-        id: generate_timestamp
         run: |
           TIMESTAMP=$(date +"%Y-%m-%d %H-%M-%S")
           YEAR=$(date +"%Y")
           MONTH=$(date +"%m")
           DAY=$(date +"%d")
           TIME_FORMAT_FOLDER=$(date +"%H-%M-%S")
-          
-          S3_PATH="stage/${YEAR}/${MONTH}/${DAY}/${TIME_FORMAT_FOLDER}/"
-          
-          echo "TIMESTAMP=$TIMESTAMP" >> $GITHUB_ENV
-          echo "S3_PATH=$S3_PATH" >> $GITHUB_ENV
-          echo "::set-output name=s3_path::$S3_PATH"
-          echo "::set-output name=timestamp::$TIMESTAMP"
 
-      # ✅ Upload reports to S3 with exact timestamp path
+          S3_PATH="stage/${YEAR}/${MONTH}/${DAY}/${TIME_FORMAT_FOLDER}/"
+
+          echo "TIMESTAMP=$TIMESTAMP" > timestamp.env
+          echo "S3_PATH=$S3_PATH" >> timestamp.env
+
+      # ✅ Upload reports to S3 using the exact saved timestamp
       - name: Upload Test Reports to S3
         if: always()
         run: |
-          aws s3 cp BlockDAG-Automation/target/surefire-reports s3://stage-test-report-blockag/${{ env.S3_PATH }}surefire-reports/ --recursive
-          aws s3 cp BlockDAG-Automation/test-output/ExtentReport.html s3://stage-test-report-blockag/${{ env.S3_PATH }}ExtentReport.html
+          source timestamp.env
+          
+          aws s3 cp BlockDAG-Automation/target/surefire-reports s3://stage-test-report-blockag/$S3_PATH/surefire-reports/ --recursive
+          aws s3 cp BlockDAG-Automation/test-output/ExtentReport.html s3://stage-test-report-blockag/$S3_PATH/ExtentReport.html
 
-      # ✅ Send Slack Notification with the same timestamp-based path
-      - name: Send Slack Notification
+      # ✅ Send Google Chat Notification with the exact timestamp-based path
+      - name: Send Google Chat Notification
         if: always()
         run: |
-          REPORT_LINK="${{ secrets.REPORT_LINK_EMAILABLE }}/${{ env.S3_PATH }}ExtentReport.html"
+          source timestamp.env
+
+          REPORT_LINK="${{ secrets.REPORT_LINK_EMAILABLE }}/$S3_PATH/ExtentReport.html"
           
-          MESSAGE="Test case run for stage environment on ${{ env.TIMESTAMP }}. \n\nReport: $REPORT_LINK"
+          MESSAGE="🚀 Test case run for stage environment on **$TIMESTAMP**. \n\n🔗 Report: $REPORT_LINK"
           
-          curl -X POST -H 'Content-type: application/json' --data "{\"channel\":\"${{ secrets.SLACK_CHANNEL_NAME }}\", \"text\":\"$MESSAGE\"}" ${{ secrets.SLACK_WEBHOOK_URL }}
+          curl -X POST -H 'Content-Type: application/json' \
+            -d "{\"text\": \"$MESSAGE\"}" \
+            "${{ secrets.GOOGLE_CHAT_WEBHOOK_URL }}"
