--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,20 +42,6 @@ jobs:
       - name: Verify AWS Identity
         run: aws sts get-caller-identity
 
-      # ✅ Generate Timestamp Once and Save
-      - name: Generate Timestamp
-        run: |
-          TIMESTAMP=$(date +"%Y-%m-%d %H-%M-%S")
-          YEAR=$(date +"%Y")
-          MONTH=$(date +"%m")
-          DAY=$(date +"%d")
-          TIME_FORMAT_FOLDER=$(date +"%H-%M-%S")
-          
-          S3_PATH="stage/${YEAR}/${MONTH}/${DAY}/${TIME_FORMAT_FOLDER}"
-          
-          echo "TIMESTAMP=$TIMESTAMP" >> $GITHUB_ENV
-          echo "S3_PATH=$S3_PATH" >> $GITHUB_ENV
-
       - name: Run Tests
         id: run_tests
         run: mvn test -DsuiteXmlFile=src/test/resources/testng.xml
@@ -75,24 +61,40 @@ jobs:
           name: emailable-report
           path: BlockDAG-Automation/test-output/ExtentReport.html
 
-      # ✅ Upload Reports to S3 with Correct Path
+      # ✅ Generate timestamp once and pass as an output variable
+      - name: Generate Timestamp
+        id: generate_timestamp
+        run: |
+          TIMESTAMP=$(date +"%Y-%m-%d %H-%M-%S")
+          YEAR=$(date +"%Y")
+          MONTH=$(date +"%m")
+          DAY=$(date +"%d")
+          TIME_FORMAT_FOLDER=$(date +"%H-%M-%S")
+          
+          S3_PATH="stage/$YEAR/$MONTH/$DAY/$TIME_FORMAT_FOLDER/"
+          
+          echo "TIMESTAMP=$TIMESTAMP" >> $GITHUB_ENV
+          echo "S3_PATH=$S3_PATH" >> $GITHUB_ENV
+          echo "::set-output name=s3_path::$S3_PATH"
+          echo "::set-output name=timestamp::$TIMESTAMP"
+
+      # ✅ Upload reports to S3 with exact timestamp path
       - name: Upload Test Reports to S3
         if: always()
         run: |
-          aws s3 cp BlockDAG-Automation/target/surefire-reports s3://stage-test-report-blockag/$S3_PATH/surefire-reports/ --recursive
-          aws s3 cp BlockDAG-Automation/test-output/ExtentReport.html s3://stage-test-report-blockag/$S3_PATH/ExtentReport.html
+          aws s3 cp BlockDAG-Automation/target/surefire-reports s3://stage-test-report-blockag/${{ env.S3_PATH }}surefire-reports/ --recursive
+          aws s3 cp BlockDAG-Automation/test-output/ExtentReport.html s3://stage-test-report-blockag/${{ env.S3_PATH }}ExtentReport.html
 
-      # ✅ Send Slack Notification with Consistent Timestamp
+      # ✅ Send Slack Notification with Clickable Link
       - name: Send Slack Notification
         if: always()
         run: |
-          REPORT_LINK="${{ secrets.REPORT_LINK_EMAILABLE }}/$S3_PATH/ExtentReport.html"
+          REPORT_LINK="${{ secrets.REPORT_LINK_EMAILABLE }}/${{ env.S3_PATH }}ExtentReport.html"
           
           # Fix double slashes in URL
           REPORT_LINK=$(echo "$REPORT_LINK" | sed 's:/\+:/:g')
-
-          MESSAGE="🚀 Test case run for stage environment on *$TIMESTAMP*.\n\n🔗 *Report:* <$REPORT_LINK|Click here>"
-
+          
+          MESSAGE="🚀 *Test case run for stage environment on:* ${{ env.TIMESTAMP }}.\n\n🔗 *<${REPORT_LINK}|View Report>*"
+          
           curl -X POST -H 'Content-type: application/json' \
-            --data "{\"channel\":\"${{ secrets.SLACK_CHANNEL_NAME }}\", \"text\":\"$MESSAGE\"}" \
-            "${{ secrets.SLACK_WEBHOOK_URL }}"
+            --data "{\"channel\":\"${{ secrets.SLACK_CHANNEL_NAME }}\", \"text\":\"$MESSAGE\"}, ${{ secrets.SLACK_WEBHOOK_URL }}
