--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -89,10 +89,10 @@ jobs:
         run: |
           REPORT_LINK="${{ secrets.REPORT_LINK_EMAILABLE }}/${{ env.S3_PATH }}ExtentReport.html"
           
-          # Ensure single slashes in URL
-          REPORT_LINK=$(echo "$REPORT_LINK" | sed 's:/\+:/:g')
+          # # Ensure single slashes in URL
+          # REPORT_LINK=$(echo "$REPORT_LINK" | sed 's:/\+:/:g')
           
-          MESSAGE="🚀 *Test case run for stage environment on:* ${{ env.TIMESTAMP }}.\n\n🔗 *<${REPORT_LINK}|View Report>*"
+          MESSAGE="🚀 *Test case run for stage environment on:* ${{ env.TIMESTAMP }}.\n\n🔗 \n\nReport: $REPORT_LINK"
           
           curl -X POST -H 'Content-type: application/json' \
             --data "{\"channel\":\"${{ secrets.SLACK_CHANNEL_NAME }}\", \"text\":\"$MESSAGE\"}" \
